added vehicles header

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="parent">
     <div class="login">
-        <h1>login</h1>
+        <h1>login page</h1>
     <form [formGroup]="loginForm">
         <label for="">Email</label>
         <input type="text" formControlName="email">
