new student form created

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -22,6 +22,8 @@
         <a routerLink="create-bank-accounts">Create Bank-Accounts</a>
         <a routerLink="student-cards">Student-cards</a>
         <a routerLink="create-student">Create-Student</a>
+        <a routerLink="create-user">Create-User</a>
+        <a routerLink="studentdetails">Student Details</a>
         <hr>
         <button (click)="logout()">logout</button>
     </div>
