--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -18,7 +18,7 @@ body, html {
 
 /* Styling the login box */
 .login {
-    background-color: rgb(226, 227, 228);
+    background: linear-gradient(beige,lime);
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -53,7 +53,7 @@ body, html {
 }
 
 .login input[type="password"]{
-    opacity: 0;
+    opacity: 1;
 }
 
 .login button {
@@ -70,4 +70,8 @@ body, html {
 
 .login button:hover {
     background-color: cornflowerblue;
+}
+
+.error{
+    color: crimson;
 }
