parent->child and child->parent communication

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,6 +24,8 @@
         <a routerLink="create-student">Create-Student</a>
         <a routerLink="create-user">Create-User</a>
         <a routerLink="studentdetails">Student Details</a>
+        <a routerLink="parent">Parent</a>
+        <a routerLink="calculator2"> Calculator2</a>
         <hr>
         <button (click)="logout()">logout</button>
     </div>
