--- a/src/app/flipkartpage/flipkartpage.component.html
+++ b/src/app/flipkartpage/flipkartpage.component.html
@@ -2,6 +2,9 @@
 <div class="parent" >
     <div class="box" *ngFor="let data of flipkartpages">
         <img src="{{data.image}}" alt="" height="100px" width="200px">
+        <div class="rating">
+            <app-rating [rating]="data.rating.rate"></app-rating>
+        </div>
         <h3>{{data.category}}</h3>
         {{data.title}}
         <p>{{'Rs. '+data.price}}</p>
