--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -26,6 +26,9 @@
         <a routerLink="studentdetails">Student Details</a>
         <a routerLink="parent">Parent</a>
         <a routerLink="calculator2"> Calculator2</a>
+        <a routerLink="silbling">Silbling</a>
+        <a routerLink="amazon">Amazon</a>
+        <a routerLink="todo">To-Do APP</a>
         <hr>
         <button (click)="logout()">logout</button>
     </div>
