eager loading completed

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,6 +29,7 @@
         <a routerLink="silbling">Silbling</a>
         <a routerLink="amazon">Amazon</a>
         <a routerLink="todo">To-Do APP</a>
+        <a routerLink="about-company">About-Company</a>
         <hr>
         <button (click)="logout()">logout</button>
     </div>
