lazy loading done

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -30,7 +30,10 @@
         <a routerLink="amazon">Amazon</a>
         <a routerLink="todo">To-Do APP</a>
         <a routerLink="about-company">About-Company</a>
+        <a routerLink="payments/upi">upi payment</a>
+        <a routerLink="payments/card">card payment</a>
         <hr>
+
         <button (click)="logout()">logout</button>
     </div>
     <div class="right">
