--- a/src/app/todoform/todoform.component.html
+++ b/src/app/todoform/todoform.component.html
@@ -1,17 +1,20 @@
 <div class="form">
 
     <h3>To-Do</h3>
-    <label for="">Task:</label>
-    <textarea name="" id="" rows="7" cols="30"></textarea>
-    <br>
+    <form action="">
+        
+        <label for="">Task:</label>
+        <textarea name="" id="" rows="7" cols="30"></textarea>
+        <br>
+    
+        <label for="">Time:</label>
+        <input type="date">&nbsp;&nbsp;
+        <button class=submit >Submit</button>
+        <br><br>
+    
+        <button class=create>create</button>&nbsp;&nbsp;
+        <button class=reset>Reset</button>
 
-    <label for="">Time:</label>
-    <input type="date">&nbsp;&nbsp;
-    <button class=submit >Submit</button>
-    <br><br>
-
-    <button class=create>create</button>&nbsp;&nbsp;
-    <button class=reset>Reset</button>
-
+    </form>
 
 </div>
