--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -15,7 +15,7 @@ body, html {
 
 /* Left-side navigation styling */
 .left {
-    background-color: slategrey;
+    background: linear-gradient(rgb(16, 159, 66),rgb(57, 134, 149));
     width: 250px;
     padding: 20px;
     box-sizing: border-box;
@@ -69,12 +69,12 @@ body, html {
 }
 
 .left button:hover {
-    background-color: rgb(13, 16, 22);
+    background-color: rgb(186, 56, 56);
 }
 
 /* Right-side content area styling */
 .right {
-    background-color: azure;
+    background: linear-gradient(rgb(41, 148, 206),rgb(12, 138, 150));
     flex: 1;
     padding: 20px;
     box-sizing: border-box;
